# Flourish_Memory_Hub

./: .dockerignore  .gitignore  DesignNotes.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_server.py  verify_system.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/audit/: __init__.py  chainer.py  exceptions.py
app/core/: config.py  constants.py
app/database/: session.py
app/middleware/: exception_handler.py
app/models/: __init__.py  audit.py  base.py  governance.py  knowledge.py  namespace.py
app/schemas/: __init__.py  audit.py  common.py  context.py  governance.py  ingestion.py  retrieval.py
app/security/: __init__.py  context.py  context_resolver.py
app/services/: __init__.py  context_assembly.py  context_exceptions.py  context_protocols.py  exceptions.py  governance.py  governance_exceptions.py  governance_protocols.py  ingestion.py  protocols.py  retrieval.py  retrieval_exceptions.py  retrieval_protocols.py
app/utils/: __init__.py
docs/: Flourish_Memory_Hub_Prototype_Brief.docx
frontend/: app.js  index.html  styles.css
scripts/: demo_flow.py
tests/integration/: test_audit_ledger_live.py  test_context_assembly_live.py  test_governance_live.py  test_ingest.py  test_retrieval_live.py  test_stage_7_live_api.py
tests/security/: test_audit_tamper.py  test_audit_truncation.py
tests/unit/: test_audit_chainer.py  test_context_assembly.py  test_governance_service.py  test_ingestion_service.py  test_retrieval_service.py  test_schema_validation.py  test_stage_7_api.py
(+10 files in other folders)
